--- a/quiz-ui/package.json
+++ b/quiz-ui/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "sweetalert2": "^11.4.17",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14",
     "vue-sweetalert2": "^5.0.5"
